--- a/mailClient/src/app/auth/signup/signup.component.html
+++ b/mailClient/src/app/auth/signup/signup.component.html
@@ -13,10 +13,18 @@
         <input formControlName="password" />
     </div>
 
+    {{ authForm.get('password').errors | json }}
+
+
     <div class="field">
         <label>Confirm Password</label>
         <input formControlName="passwordConfirmation" />
     </div>
 
+    {{ authForm.get('passwordConfirmation').errors | json }}
+
+
    <button class="ui submit button primary">Submit</button>
+
+   {{ authForm.errors | json }}
 </form>
