--- a/mailClient/src/app/shared/input/input.component.html
+++ b/mailClient/src/app/shared/input/input.component.html
@@ -1,1 +1,42 @@
-<p>input works!</p>
+<div class="field">
+    <label>{{ label }}</label>
+    <input [type]="inputType" [formControl]="control" />
+
+    <div *ngIf="showErrors()" class="ui pointing red basic label">
+
+        <p *ngIf="control.errors.required">
+            Value is required
+        </p>
+
+        <p *ngIf="control.errors.minlength">
+            Value you entered is 
+            {{ control.errors.minlength.actualLength }}
+            characters, but it must be at least 
+            {{ control.errors.minlength.requiredLength }}
+            characters.
+        </p>
+
+        <p *ngIf="control.errors.maxlength">
+            Value you entered is 
+            {{ control.errors.maxlength.actualLength}}
+            characters, but it must be at up to 
+            {{ control.errors.maxlength.requiredLength }}
+            characters.
+        </p>
+
+        <p *ngIf="control.errors.pattern">
+            Invalid format
+        </p>
+
+        <p *ngIf="control.errors.nonUniqueUsername">
+            Username has already taken
+        </p>
+
+        <p *ngIf="control.errors.noConnection">
+            Check your internt connection
+        </p>
+
+        
+
+    </div>
+</div>
