--- a/mailClient/src/app/inbox/email-show/email-show.component.html
+++ b/mailClient/src/app/inbox/email-show/email-show.component.html
@@ -1,4 +1,4 @@
-<div class="header" *ngIf="email"> <!--αν δε το βαλω θα βγει undefined το μειλ γτ οντως ειναι μεχρι να παρει τιμη απο το subscription-->
+<div class="header"> <!--αν δε το βαλω θα βγει undefined το μειλ γτ οντως ειναι μεχρι να παρει τιμη απο το subscription-->
     <div>
        <h3>Subject: {{ email.subject }} </h3>
         <div>
