--- a/mailClient/src/app/inbox/email-index/email-index.component.html
+++ b/mailClient/src/app/inbox/email-index/email-index.component.html
@@ -1,12 +1,12 @@
-<div class="ui celled list">
+<div class="ui celled list v1">
     <div class="item" *ngFor="let email of emails">
         <a [routerLink] = "email.id" routerLinkActive="active"> <!--αν διαλεξω καποιο μειλ γινομαι redirect στο inbox/email:id(δε κανω specify το inbox μιας κ εκει ειμαι ηδη)-->
         <!--το id το χω ηδη αντλησει απ το api call-->
             <div class="content">
-            <div class="header">
+            <div class="header trim">
                 {{email.subject}}
             </div>
-            <p>
+            <p class="trim">
                 {{email.from}}
             </p>
         </div>
