--- a/mailClient/src/app/inbox/email-show/email-show.component.html
+++ b/mailClient/src/app/inbox/email-show/email-show.component.html
@@ -8,6 +8,12 @@
            <b>To:</b>  {{ email.to }}
         </div>
     </div>
+
+
+<!--Here I return the email-reply component-->
+<div>
+    <app-email-reply [email]="email"></app-email-reply>
+</div>
 </div>
 
 <div class="ui divider"></div>
